Minor changes to white paper. Added taxEfficientIndividual() to initPopulation

--- a/PyFin White Paper/Pyfin White Paper.tex
+++ b/PyFin White Paper/Pyfin White Paper.tex
@@ -5,8 +5,7 @@
 %%
 % Book metadata
 \title{PyFin White Paper}
-\author[]{Herman Carstens, Invoke Analytics}
-
+\author[]{Herman Carstens, \href{http://invokeanalytics.co.za/}{Invoke Analytics}}
 %%
 % If they're installed, use Bergamo and Chantilly from www.fontsite.com.
 % They're clones of Bembo and Gill Sans, respectively.
@@ -150,22 +149,21 @@
 
 
 \section{Abstract} \label{ch:intro}
-\newthought{PyFin} is a tool for calculating the optimal allocation of a person's retirement savings in the South African tax environment. It helps an individual to decide on how future savings should be split between different savings options. It considers how much money is already in those accounts, how they grow, income tax, capital gains tax, as well as exemptions for vehicles such as Tax Free Savings Accounts and Retirement Annuities, both during the working and retirement phases of an individual's life. It uses an optimization function to find the optimal allocation of one's savable income to maximise a person's mean income after tax during retirement. The output of the tool is a report with a possible allocation plan for the rest of this tax year. It also provides the projects into the future.
+\newthought{PyFin} is a tool which helps individuals decide how to split their retirement savings given South African tax rates. It considers how much money is already in those accounts, how future savings can be allocated, and how they grow and are taxed now and at withdrawal. It then devises a plan that will maximise a person's mean income after tax during retirement. The output of the tool is a report with a possible allocation plan for the rest of this tax year. It also provides the projections into the future.
 
 \section{The Short Version}
 \subsection{Introduction}
-\paragraph{Background} This tool was inspired by a \href{https://justonelap.com/podcast-can-one-etf-rule/}{Fat Wallet Show podcast} on \href{http://justonelap.com}{JustOneLap}, which alerted us to the fact that investing optimally for my retirement is a really difficult problem. Although financial advisors can show that e.g. investing the full 27.5\% allowance in an RA~\sidenote{Retirement Annuity. The same goes for pension and provident funds} is not the most effective way to structure your savings\sidenote{See for example \href{https://www.fin24.com/Finweek/Investment/save-thousands-in-tax-by-diversifying-your-retirement-savings-20180110}{"Save thousands in tax by diversifying your retirement savings"}, By Danie Venter, published 10 January 2018 on Fin24}, it is very difficult to find the optimal allocation, given the tax implications now and at retirement. For example, the more I put in my RA now, the lower my taxable income, and the more I can save on the same salary. But it does mean that during retirement I'll be paying more income tax than I would if I had put the (admittedly less) money in DIs\sidenote{Discretionary Investments. Unit trusts, ETFs, etc. See \href{http://www.stealthywealth.co.za/2018/05/i-love-capital-gains-tax.html}{this} Stealthy Wealth article on CGT vs income tax, and why you rather want to pay CGT. But there's also the CGT-inflation problem, as discussed later in this paper under \ref{tax rules}{Tax Rules}.}.
-At Invoke Analytics we solve problems like these by using mathematical algorithms, machine learning, and statistics, and decided to try our hand at it. 
+\paragraph{Background} This tool was inspired by a \href{https://justonelap.com/podcast-can-one-etf-rule/}{Fat Wallet Show podcast} on \href{http://justonelap.com}{JustOneLap}, which alerted us to the fact that investing optimally for our retirement is a really difficult problem. Although financial advisors can show that e.g. investing the full 27.5\% allowance in an RA~\sidenote{Retirement Annuity. The same goes for pension and provident funds} is not the most effective way to structure your savings\sidenote{See for example \href{https://www.fin24.com/Finweek/Investment/save-thousands-in-tax-by-diversifying-your-retirement-savings-20180110}{"Save thousands in tax by diversifying your retirement savings"}, By Danie Venter, published 10 January 2018 on Fin24}, it is very difficult to find the optimal allocation, given the tax implications now and at retirement. For example, the more I put in my RA now, the lower my taxable income, and the more I can save on the same salary. But it does mean that during retirement I'll be paying more income tax than I would if I had put the (admittedly less) money in DIs\sidenote{Discretionary Investments. Unit trusts, ETFs, etc. See \href{http://www.stealthywealth.co.za/2018/05/i-love-capital-gains-tax.html}{this} Stealthy Wealth article on CGT vs income tax, and why you rather want to pay CGT. But there's also the CGT-inflation problem, as discussed later in this paper under \ref{tax rules}{Tax Rules}.}. But DIs tend to grow better than RAs, if only due to lower fees. So how should one split one's savings?  At Invoke Analytics we solve problems like these by using mathematical algorithms, machine learning, and statistics, and decided to try our hand at it. The result is PyFin.
 
-\paragraph{Points to note} \newthought{Pyfin was written by engineers} to support our personal finance decisions. Although we spoke to tax practitioners and did tests to ensure that we implemented the tax rules correctly, there are no guarantees. Use it at your own risk, it doesn't constitute financial advice, etc. etc. Actually, if you spot a mistake, please let us know!
+\paragraph{Points to note} \newthought{Pyfin was written by engineers} to support our personal finance decisions. Although we spoke to tax practitioners and did tests to ensure that we implemented the tax rules correctly, there are no guarantees. Use it at your own risk, it doesn't constitute financial advice, etc. etc. Actually, if you spot a mistake, please let us know!\sidenote{Changes can be requested on \href{https://gitlab.com/invokeanalytics/pyfin}{Gitlab} by raising an issue (for programmers), or simply by email Herman at herman@invokeanalytics.co.za}
 
-\newthought{Saving large amounts of money} in any of these vehicles will leave you with, well, large amounts of money\sidenote{Provided you use a low fee, high growth vehicle such as ETFs via \href{www.easyequities.co.za}{Easy Equities}}. There are better and worse ways to do it, of course, and that's where PyFin comes in. But the key is to save a lot. The calculator can only work with the money you're willing to put away. Living frugally and saving a lot will leave you richer (and probably happier) than living large and saving whatever is left, optimally.
+\newthought{Saving large amounts of money} in any of these vehicles will leave you with, well, large amounts of money\sidenote{Provided you use a low fee, high growth vehicle such as ETFs via \href{www.easyequities.co.za}{Easy Equities}}. There are better and worse ways to do it, of course, and that's where PyFin comes in. But the key is to save a lot. The calculator can only work with the money you're willing to put away. Living frugally and saving a lot will leave you richer (and probably happier) than living large and saving whatever is left, optimally.\sidenote{We've tried many budgeting apps to help us get a handle on this. None of them have really worked, except for \href{https://22seven.com/}{22seven}.}
 
 \newthought{"Year zero", when your funds run out}, is extremely sensitive to the withdrawal rate. If you withdraw too much or the investments underperform, you could run out of money years before your life expectancy. The ``4\% rule'' says that backtested over the last hundred years, withdrawing 4\% of capital per year from an investment will ensure that you preserve your capital\sidenote{E.g., see \href{http://www.stealthywealth.co.za/2016/06/what-is-4-rule-for-retirement.html}{this} Stealthy Wealth article}. Therefore PyFin has two settings: capital preservation, and income maximisation. With capital preservation, it will withdraw 4\% per year during retirement. With income maximisation, it will withdraw as much as it can to give you a steady income until your life expectancy. So it aims to have zero capital in the year of your death. These the withdrawal rates are often above 4\%, depending on your retirement age and life expectancy. Bear that in mind.
 
 \newthought{PyFin's objective is to maximise your mean retirement income after tax}, not to minimize the tax you pay. These two numbers are related, but not identical. The algorithm tries to structure your investments in such a way that your money works for you in the most effective way possible. However, the solutions may be counter-intuitive. It may seem that you pay less tax by sticking to the R33k TFSA limit and using your 27.5\% RA allowance. However, these have tax implications later in life, which may overshadow the tax benefits now (depending on the growth of the investments). 
 
-\newthought{PyFin won't restructure your existing investments}. It will only allocate future investments considering what you have already. You can't restructure your RA anyway, but you could with your TFSA and DIs. The cheapest way generally is to just alter future contributions
+\newthought{PyFin won't restructure your existing investments}. It will only allocate future investments considering what you have already. You can't restructure your RA anyway, but you could with your TFSA and DIs. The cheapest way generally is to just alter future contributions.
 
 \newthought{PyFin doesn't derisk your investments as you get older}. As you get closer to retirement, the theory states that you want to gradually move your investments to lower risk vehicles such as bonds and cash, and away from equity, so that you don't withdraw a disproportionate amount if you retire during a market crash. At present PyFin considers capital growth and taxes, not the inherent risk or volatility of equity vs cash vs bonds. This could be built in at a later stage. However, we are not sure if you really want all your money in low-risk vehicles on your retirement date anyway. Most people will live for another 20 years after retirement, and some more. Having three years' worth of bonds as a backup for when markets crash probably a good idea, so that you don't have to cash in your equity investments during that time. But putting all of your money in low-growth ``safe'' investments is probably sub-optimal. Furthermore, most RAs derisk automatically, so that by the time you retire, your RA portfolio is already mostly in cash and bonds anyway. What we would do to get around this current PyFin limitation is to include a bonds ETF debit order as part of our expenses for a few years before retirement. Once again, this is not investment advice; it just reflects the approach with which the calculator was written.
 
@@ -174,6 +172,8 @@ At Invoke Analytics we solve problems like these by using mathematical algorithm
 \subsection{Assumptions}
 
 \paragraph{Contributions} It is assumed that contributions are made in equal monthly instalments. If you invest all your savings in the first month of the tax year, your growth should exceed the project figures. On the other hand, if you withdraw the annual withdrawal figure on the first day of the new tax year, you will see less growth than if you withdraw the sum in equal amounts over twelve months.
+
+RA contributions can be tricky: often private investors invest in RAs using after-tax income, claiming the tax benefit back in the next tax year. At the moment PyFin assumes that RA contributions are made with before-tax income to simplify things. However, this feature will be high on the list of future additions.
 
 \paragraph{Inflation} Because PyFin is interested in the optimal investment allocation over time, and not the actual present value of future investments\sidenote{E.g. "to maintain your current living standards, you need to save so much per month"}, inflation doesn't really come into the play.
 
@@ -195,6 +195,11 @@ We assume that at retirement your RA is paid into a living annuity, not a guaran
 
 The model determines the optimal RA payout, once again for your mean annual income after tax during retirement, not necessarily the minimum tax in the RA payout year.
 
+\paragraph{Growth, Dividends, and Fees}
+At the time of writing, PyFin only has one number: the annual growth in an investment product. We assume that this takes the fees, dividend reinvestments, etc. into account. It would be wonderful to consider platform, deposit, and other fees in the calculation. However, this will have to be added in a later version. 
+
+Default values are specified for cases where the user does not know the average growth his or her investment. For example, if the user's investment horizon is five years, the mean of a rolling five-year window of the JSE All Share Index return will be used. For RAs, regulation-28 compliant fund returns will be used, and a 2.5\% fee assumed (since we assume that if a user is not aware of the growth of his or her RA, high fees are likely)
+
 \paragraph{What About Property?}
 Buying property is a lifestyle decision, not a sound investment decision\sidenote{Credit to The Fat Wallet show podcast for this succinct description.}, and therefore is not considered by PyFin. We know that many people who grew up in the property boom times of the early 2000's or who read \textit{Rich Dad, Poor Dad} will balk at this (``I would rather pay off my own bond that someone else's''). Everyone also knows someone who bought a lot of property and now lives off the income. However, the conclusion that buying-to-let (BTL) is a sub-optimal investment and time decision has been reached by all of the personal finance experts of whom we are aware\sidenote{The articles are too numerous to list here, but check out Magnus Heystek, Simon Brown, Warren Ingram, and others.
 	
@@ -203,13 +208,24 @@ Also see \href{http://www.rollingalpha.com/2016/09/27/rent-or-buy-the-calculator
 If you want an income from property, buy a listed property ETF, and leave the questions of raising capital, deciding which property to buy, how to maintain it, how to evict tenants, and all the rest, to the professional property companies. Just note that listed property share dividends (like income from property) are taxed at a higher rate than other shares. Also realise that what you actually want is investment growth. So just buy the shares and ETFs that do that - ones that may or may not include property.
 
 \subsection{What to expect}
-The first thing to expect is that you will be taking financial advice from a computer, which feels a bit weird. You could try to be fancy and call it a ``Robo-advisor'' or ``AI'' the way OUTvest and other financial services companies' marketing departments do, but that's just smoke and mirrors. It is not a physical robot, and it is not AI. But it is still a computer program. Of course a lot of human expertise, thought, and care went into building the program, but you may still be uncomfortable investing money, possibly in counter-intuitive ways, on the advice from a calculator. It feels weird to us too. The best advice we have is to check the answers. Try to come up with a better solution yourself by trying different plans. This will give you a feel for the numbers.
 
-Also, due to the nature of the Genetic Algorithm there might be some jitter on the long-term contributions. We suggest that you use your good judgement and smooth these over in your actual contributions if you think that it is just noise.
+For your personal information, you input your income before tax, your monthly expenses, medical expenses. For each of your savings vehicles you input how much money you have in each account, as well as the growth rates for these accounts (annualised over 10 years would be first prize). You also specify whether it is a TFSA, RA, or DI. PyFin assumes that:
 
-The output of the analysis will be a report that shows you how to allocate your funds, and how your capital is expected to grow. You will also get a spreadsheet showing all of the intermediate numbers, in case you are interested.
+\begin{equation}
+\textrm{Income After Tax} = \textrm{Income before tax} - \textrm{RA contribution} - \textrm{tax}
+\end{equation}
 
-\subsection{Under the Hood: How the Optimization Works}
+\begin{equation}
+\textrm{Savable Income} = \textrm{Income after tax} - \textrm{expenses}.
+\end{equation}
+
+It allocates your RA contribution(s) before tax, and finds the optimal distribution of your savable income between your other savings vehicles. The output of the analysis will be a report that shows you how to allocate your funds, and how your capital is expected to grow. You will also get a spreadsheet showing all of the intermediate numbers, in case you are interested.
+
+%The first thing to expect is that you will be taking financial advice from a computer, which feels a bit weird. You could try to be fancy and call it a ``Robo-advisor'' or ``AI'' the way OUTvest and other financial services companies' marketing departments do, but that's just smoke and mirrors. It is not a physical robot, and it is not AI. But it is still a computer program. Of course a lot of human expertise, thought, and care went into building the program, but you may still be uncomfortable investing money, possibly in counter-intuitive ways, on the advice from a calculator. It feels weird to us too. The best advice we have is to check the answers. Try to come up with a better solution yourself by trying different plans. This will give you a feel for the numbers.
+
+Due to the nature of the Genetic Algorithm there might be some jitter on the long-term contributions. We suggest that you use your good judgement and smooth these over in your actual contributions if you think that it is just noise.
+
+\subsection{Behind  the scenes: How the Optimization Works}
 \newthought{Nerd Alert: we describe the algorithm in layman's terms, although some may disagree with ``layman's''...} 
 
 The investment allocation problem is mathematically complex due to the tax rules. Without going into details, it is our strong suspicion that it is mathematically impossible to guarantee that any algorithm will find \textit{the} optimal investment allocation solution. This is mainly due to the complexity of the tax laws. We therefore employ what are called "metaheuristic" methods\sidenote{For more, see \href{https://en.wikipedia.org/wiki/Metaheuristic}{this} Wikipedia article}. Metaheuristic algorithms can't guarantee that the best solution will be found, but when tuned properly they find really good solutions, usually leapfrogging the places where other algorithms get stuck. A solution found using a metaheuristic maybe the best; the only way would be to find a better one. However, experience has shown that the solutions these methods find are reliably better than any a human could devise.
@@ -219,7 +235,7 @@ There are many heuristic methods, most of which are inspired by natural processe
 \newpage
 \section{The Tax Details}
 
-\textit{This section has been written to reflect our (mis)understanding of how tax works. We include this deliberately so that the reader may identify shortcomings in the calculation. Bear in mind that even if the tax laws are described correctly below, it does not mean that the code does the same thing. We've made every effort to ensure reliable results, though.}\\\\
+\textit{This section has been written to reflect our (mis)understanding of how tax works. We include this deliberately so that the reader may identify shortcomings in the calculation. Bear in mind that even if the tax laws are described correctly below, it does not mean that the code does the same thing. We've made every effort to ensure reliable results, though.\sidenote{Changes can be requested on \href{https://gitlab.com/invokeanalytics/pyfin}{Gitlab} by raising an issue (for programmers), or simply by email Herman at herman@invokeanalytics.co.za}}\\\\
 For the purposes of this calculation there are two main kinds of taxes payable by individuals in South Africa: income tax, and capital gains tax. There are also a few cases where one can obtain tax deductions. The only one taken into account in PyFin (at present) is medical aid and medical expenses.
 
 \subsection{Tax Brackets}
