Added information about default growth rate values to white paper.

--- a/PyFin White Paper/Pyfin White Paper.tex
+++ b/PyFin White Paper/Pyfin White Paper.tex
@@ -198,7 +198,9 @@ The model determines the optimal RA payout, once again for your mean annual inco
 \paragraph{Growth, Dividends, and Fees}
 At the time of writing, PyFin only has one number: the annual growth in an investment product. We assume that this takes the fees, dividend reinvestments, etc. into account. It would be wonderful to consider platform, deposit, and other fees in the calculation. However, this will have to be added in a later version. 
 
-Default values are specified for cases where the user does not know the average growth his or her investment. For example, if the user's investment horizon is five years, the mean of a rolling five-year window of the JSE All Share Index return will be used. For RAs, regulation-28 compliant fund returns will be used, and a 2.5\% fee assumed (since we assume that if a user is not aware of the growth of his or her RA, high fees are likely)
+Default values are specified for cases where the user does not know the average growth his or her investment. For example, if the user's investment horizon is five years, the mean of a rolling five-year window of the JSE All Share Index return since 1974 is used for TFSAs and DIs. For RAs, regulation-28 compliant fund returns are used\sidenote{A figure of 13.73\% is used, as the average of the annualised returns since inception for Allan Gray, Foord, Sanlam, Old Mutual, Absa, Coronation, and Discovery's balanced funds.}, and a 4\% fee assumed (since we assume that if a user is not aware of the growth of his or her RA, high fees are likely)
+
+Living annuities may also invest in balanced funds, but to be conservative a return of inflation + 1\% is specified as a default.
 
 \paragraph{What About Property?}
 Buying property is a lifestyle decision, not a sound investment decision\sidenote{Credit to The Fat Wallet show podcast for this succinct description.}, and therefore is not considered by PyFin. We know that many people who grew up in the property boom times of the early 2000's or who read \textit{Rich Dad, Poor Dad} will balk at this (``I would rather pay off my own bond that someone else's''). Everyone also knows someone who bought a lot of property and now lives off the income. However, the conclusion that buying-to-let (BTL) is a sub-optimal investment and time decision has been reached by all of the personal finance experts of whom we are aware\sidenote{The articles are too numerous to list here, but check out Magnus Heystek, Simon Brown, Warren Ingram, and others.
